kubernetes/app-service/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: app
